# FA-Checker

./: .gitignore  1.json  1a-tests.txt  1a.txt  1b-tests.txt  1b.txt  1c-test.sh  1c-tests.txt  1c.txt  1d-tests.txt  1d.txt  1e-tests.txt  1e.txt  2-tests.txt  2.json  2.txt  CMakeLists.txt  CMakeSettings.json  FA-Checker.cpp  FA-Checker.sln  FA-Checker.vcxproj  FA-Checker.vcxproj.filters  FA.h  FaChecker.cpp  README.md  bad-problems.json  evenLen-tests.txt  evenLen.txt  fa2.txt  fsa1.json  fsa2.json  json_reader.cpp  penultimate1-test.txt  penultimate1.txt  printscore.cpp  problems.json  readFA.cpp  readTests.cpp  setup.sh  test.sh  (+11 more)
.github/workflow/: cmake.yml
.github/workflows/: cmake.yml  issue.yml  main.yml
closure-tester/: closure-tester.cpp  closure-tester.vcxproj  closure-tester.vcxproj.filters
tests/: CMakeCache.txt
