cmake_minimum_required(VERSION 3.10.0)
set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake")
project (FA-Checker LANGUAGES CXX)
set(CMAKE_SUPPRESS_REGENERATION true)
set(CMAKE_CXX_STANDARD 17)
SET(CMAKE_BUILD_TYPE "Release")
#find_package(Boost 1.75.0 COMPONENTS container-hash) 
find_package(Boost 1.75.0)
include_directories(${Boost_INCLUDE_DIRS}) 
link_directories(${Boost_LIBRARY_DIRS})
add_executable(Fa-Checker FA-Checker.cpp readFA.cpp readTests.cpp FA.h)
target_link_libraries(Fa-Checker ${Boost_LIBRARIES})
target_include_directories(Fa-Checker PUBLIC "${Boost_INCLUDE_DIRS}" "${PROJECT_SOURCE_DIR}")
